--- a/code/dev/less/dashboards.less
+++ b/code/dev/less/dashboards.less
@@ -76,3 +76,12 @@ section[drawer] .side-menu .dashboard_menu .side-menu-item.item-title {
     background-image: url('../images/columns/3-3-3-3-sprite.png');
   }
 }
+
+.dashboard-preview-background{
+  width: 100%;
+  min-height: 90vh;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url('../images/background-dashboard.png')
+}
