--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -615,6 +615,14 @@ section[drawer] .side-menu .dashboard_menu .side-menu-item.item-title a {
 .icon-structure--3-3-3-3 {
   background-image: url('../images/columns/3-3-3-3-sprite.png');
 }
+.dashboard-preview-background {
+  width: 100%;
+  min-height: 90vh;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url('../images/background-dashboard.png');
+}
 .domain-caching-rules__info .panel-buttons-left {
   padding-right: 30px;
 }
