--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -268,3 +268,17 @@ textarea {
 .text--courier {
   font-family: Courier;
 }
+
+// Users list
+.table {
+  &.users-list {
+    & .status-2fa {
+      &-enabled {
+        color: @app-color-green;
+      }
+      &-disabled {
+        color: @app-color-red;
+      }
+    }
+  }
+}
