--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -269,16 +269,17 @@ textarea {
   font-family: Courier;
 }
 
-// Users list
+// Users List Page
 .table {
   &.users-list {
     & .status-2fa {
-      &-enabled {
-        color: @app-color-green;
-      }
-      &-disabled {
-        color: @app-color-red;
-      }
+      // TODO: choose color
+      // &-enabled {
+      //   color: @app-color-green;
+      // }
+      // &-disabled {
+      //   color: @app-color-red;
+      // }
     }
   }
 }
