--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -339,6 +339,7 @@ form .error-messages.ng-active {
 }
 #drawer {
   z-index: 999;
+  overflow: auto;
 }
 section[drawer] {
   background-color: #2E2F2F;
@@ -346,6 +347,7 @@ section[drawer] {
 section[drawer] #logo {
   background-color: #606363;
   height: 52px;
+  margin-left: 10px;
   background: transparent;
 }
 section[drawer] #logo img {
@@ -360,6 +362,7 @@ section[drawer] .side-menu .side-menu-item {
   line-height: 20px;
   padding: 10px;
   font-size: 16px;
+  margin-left: 10px;
   color: #f7941e;
   text-decoration: none;
 }
@@ -411,6 +414,10 @@ section[drawer] .side-menu .active-side-menu-item .side-menu-sub-item {
 }
 .menu-toggle {
   font-size: 24px;
+  padding: 12px 0 9px 20px;
+}
+
+.menu-search {
   padding: 9px 0 9px 20px;
 }
 .introjs-helperNumberLayer {
