--- a/code/dev/less/navbar.less
+++ b/code/dev/less/navbar.less
@@ -15,9 +15,22 @@
     }
     div[paper-drawer-toggle] {
       display: inline-block;
-      padding: 20px;
       font-size: 24px;
       //line-height: 60px;
+    }
+
+
+    .glyphicon-menu-hamburger {
+      padding: 12px 0 9px 20px !important;
+    }
+
+    .mobile-menu {
+      float:left;
+    }
+
+    .menu-toggle {
+      font-size: 24px;
+      padding: 0 0 9px 20px;
     }
 
     .user {
@@ -30,7 +43,7 @@
 
       li.fit {
         text-align: right;
-        margin-top: 6px;
+        margin-top: 12px;
         // margin-right: 10px;
         //height: @app-top-menu-height;
       }
