--- a/code/dev/less/sidebar.less
+++ b/code/dev/less/sidebar.less
@@ -20,7 +20,7 @@ section[drawer] {
       display: block;
       height: @app-side-menu-item-height;
       line-height: (@app-side-menu-item-height - 20);
-      padding: 10px;
+      padding: 2px 0 10px 5px;
       font-size: 16px;
       color: @app-side-menu-text-color;
       //border-bottom: 1px solid lighten(@app-side-menu-background, 5%);
@@ -32,7 +32,7 @@ section[drawer] {
         border-right: 4px solid @app-side-menu-text-color;
       }
       i {
-        margin: 0 10px;
+        margin: 0 10px 0 0;
       }
     }
     .side-menu-sub-item {
@@ -68,22 +68,20 @@ section[drawer] {
 //
 .left-menu-start {
   display: inline-block;
-  width: 5px;
   text-align: center;
   i {
-    margin: 0px 4px 0px -17px !important;
     font-size: 20px;
   }
 }
 
 .sub-menu-icon {
-  margin: 0px 4px 0px -17px !important;
+  margin: 0px 4px 0px 0px !important;
 }
 
-.menu-toggle {
-  font-size: 24px;
+.menu-search {
   padding: 9px 0 9px 20px;
 }
+
 
 // fix angular-intro
 //
