--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -300,6 +300,114 @@ form .error-messages.ng-active {
   line-height: 100%;
   opacity: 1;
 }
+.login-section.ng-scope .main_img_container {
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+}
+.login-section.ng-scope .login_box {
+  /* background-color: rgba(41, 41, 41, 0.6); */
+  border-radius: 0;
+  height: auto;
+}
+.login-section.ng-scope .logo {
+  background-color: #2e2f2f;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  display: block;
+  height: 150px;
+  left: 0;
+  margin: 0 auto;
+  padding: 15px;
+  position: relative;
+  width: 150px;
+  z-index: 500;
+}
+.login-section.ng-scope .logo img {
+  max-width: 100%;
+  height: auto;
+  /* vertical-align: middle; */
+  padding-top: 46px;
+}
+.login-section.ng-scope .login_form {
+  background-color: rgba(47, 46, 46, 0.9);
+  border-bottom: 16px solid #fff;
+  fill-opacity: 0;
+  filter: initial;
+  margin-top: -57px;
+  opacity: 0.8;
+  padding: 50px 45px 15px;
+  z-index: 100;
+}
+.login-section.ng-scope .input-lg {
+  height: 45px;
+  /* padding: 10px 16px; */
+  font-size: 15px;
+  line-height: 1.3333333;
+  border-radius: 3px;
+  background: #fff !important;
+  display: block;
+  position: relative;
+  width: 100%;
+  border: none;
+}
+.form-group.email-rev {
+  margin-bottom: 2px !important;
+}
+.login-section.ng-scope .login_form .form-group {
+  margin: 0;
+  height: 45px;
+  display: block;
+  position: relative;
+  width: 100%;
+  text-align: center;
+}
+.login-section.ng-scope .login_form .form-group.marl_med.forgot_rev {
+  background-color: rgba(247, 148, 22, 0.6);
+  margin-bottom: 8px;
+}
+.login-section.ng-scope .login_form .form-group.marl_med.create_rev {
+  border: 1px solid #f7941e;
+  border-radius: 5px;
+}
+.form-group.marl_med.create_rev a {
+  font-size: 18px;
+}
+.login-section.ng-scope .btn-primary {
+  color: #fff;
+  background-color: #f7941e;
+  /* border-color: #f7941e; */
+  margin-top: 15px;
+}
+.login-section.ng-scope .btn-group-lg > .btn,
+.btn-lg {
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.3333333;
+  border-radius: 3px;
+}
+.form-group.marl_med {
+  margin-top: 7px !important;
+}
+.login_form .login_rev {
+  color: #fff;
+  font-size: 24px;
+  font-weight: 600;
+  text-align: center;
+  text-transform: uppercase;
+}
+.login_form .login_rev1,
+.d_account_rev1 {
+  font-size: 14px;
+  color: #fff;
+  text-align: center;
+}
+.main_img_container .footerNoteA {
+  margin-left: 0;
+  text-align: center;
+}
 .main_img_container {
   left: 50%;
   position: absolute;
@@ -320,7 +428,7 @@ form .error-messages.ng-active {
   background-size: cover;
 }
 .login_box {
-  background-color: rgba(41, 41, 41, 0.6);
+  /*-- background-color: rgba(41, 41, 41, 0.6); --*/
   border-radius: 10px;
   height: auto;
 }
