--- a/code/dev/less/dashboards.less
+++ b/code/dev/less/dashboards.less
@@ -86,28 +86,25 @@ section[drawer] .side-menu .dashboard_menu .side-menu-item.item-title {
   background-image: url('../images/background-dashboard.png')
 }
 
-body {
-    overflow-y: hidden;
-}
-
-@-moz-document url-prefix() {  
-  section[drawer] .side-menu .side-menu-item {
-     padding-left: 20px;
-  }
-  
-  .paper-header .navbar .navbar-inner .navbar-header .ng-isolate-scope .form-control.ng-pristine.ng-untouched.ng-valid.ng-valid-editable {
-    position: relative;
+@-moz-document url-prefix() { 
+  .paper-header .navbar-header search.ng-isolate-scope .form-control {
+    position:relative;
     top: 12px;
   }
+  section[drawer] .side-menu .side-menu-item {
+     padding-left: 22px;
+  }
+ 
 }
-
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
     section[drawer] .side-menu .side-menu-item {
-     padding-left: 20px;
-    }
+      padding-left: 22px;
+  }
+  .paper-header .navbar-header search.ng-isolate-scope .form-control {
+      position: relative;
+      top: 11px;
+  }
 }
-@supports (-ms-accelerator:true) {
-    section[drawer] .side-menu .side-menu-item {
-     padding-left: 20px;
-    }
+body{
+	overflow-y:hidden;
 }
