--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -913,6 +913,7 @@ i {
   background-color: #f2f2f2;;
   padding-top: 30px;
   padding-bottom: 30px;
+  min-height: 100%;
 }
 .signup-wrapper .signup-container {
  background-color: #fff;
@@ -961,4 +962,57 @@ i {
   margin-top: 30px;
   font-size: 18px;
   color: #777;
+}
+
+.form-body {
+  margin-top: 25px;
+}
+.form-action {
+  padding: 12.5px 0;
+}
+.signup-form .form-control{
+  height: 40px;
+}
+.signup-form .control-label {
+  color: #777;
+}
+.form-action .btn {
+  height: 40px;
+  line-height: 25px;
+  width: 100px;
+}
+.form-action button.btn-success {
+  background-color: #FF8A00;
+  border-color: #FF8A00;
+}
+.form-action button.btn-success:hover {
+  background-color: rgba(255, 138, 0, 0.70);
+  border-color: #FF8A00;
+}
+
+/* some common input form css */
+input[type="text"], input[type="email"], input[type="password"], textarea {
+  padding: 1%;
+  border: 1px solid #EAEAEA;
+  line-height: 20px;
+  width: 98%;
+  margin: 0 0 5px;
+  background-color: #F8F8F8;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+input[type="text"], input[type="email"], input[type="search"], input[type="password"], textarea {
+  -moz-appearance: none !important;
+  -webkit-appearance: none !important;
+  appearance: none !important;
+}
+button, input, select, textarea {
+  color: #666666;
+  font: 16px 'Lato', sans-serif;
+  line-height: 20px;
+  word-wrap: break-word;
 }
