--- a/code/dev/less/navbar.less
+++ b/code/dev/less/navbar.less
@@ -1,7 +1,8 @@
 .navbar {
-
   margin: 0;
   border: none;
+  border-radius: 0;
+  background-color: #fff;
 
   .navbar-inner {
 
@@ -56,6 +57,7 @@
 }
 
 .navbar-nav > li > a {
+  color: #FF8A00;
   padding-top: 10px;
   padding-bottom: 10px;
   line-height: 16px;
