--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -3,7 +3,9 @@
 @import "elements/block";
 @import "elements/panel";
 @import "page";
+@import "common";
 @import "login";
+@import "signup";
 @import "sidebar";
 @import "navbar";
 @import "heatmaps";
