--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -4,7 +4,7 @@ body {
 }
 
 body {
-  padding-top: 60px;
+  //padding-top: 60px;
 }
 
 .main-layout {
@@ -22,7 +22,7 @@ body {
 .page-inner {
   //padding-top: 20px;
   //position: relative;
-  background-color: @app-color-grey-200;
+  background-color: #fafbfc;
 }
 
 .layout {
