--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -335,6 +335,10 @@ form .btn {
   background-color: rgba(255, 138, 0, 0.7);
   border-color: #FF8A00;
 }
+.btn.btn-warning:hover,
+.btn.btn-warning:focus {
+  border-color: #FF8A00;
+}
 .panel-default .panel-heading {
   background-color: #4A4F55;
 }
