--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -339,12 +339,6 @@ form .btn {
 .btn.btn-warning:focus {
   border-color: #FF8A00;
 }
-.panel-default .panel-heading {
-  background-color: #4A4F55;
-}
-.panel-heading label {
-  color: #fff;
-}
 .main_img_container {
   left: 50%;
   position: absolute;
@@ -921,7 +915,9 @@ i {
   box-shadow: 0 5px 20px 0 #888888;
 }
 .billing-plan.current {
-  margin-top: -20px;
+  -moz-box-shadow: 0 5px 20px 0 #888888;
+  -webkit-box-shadow: 0 5px 20px 0 #888888;
+  box-shadow: 0 5px 20px 0 #888888;
 }
 .billing-plan-header {
   color: #fff;
@@ -946,7 +942,6 @@ i {
   background-color: #FF8A00;
   border-radius: 0;
   width: 170px;
-  text-transform: uppercase;
   border: 0;
   outline: none;
 }
@@ -972,12 +967,12 @@ i {
 }
 @media (min-width: 992px) {
   .billing-plan-description {
-    min-height: 240px;
+    min-height: 160px;
   }
 }
 @media (min-width: 1200px) {
   .billing-plan-description {
-    min-height: 120px;
+    min-height: 140px;
   }
 }
 .subscribe-contact-info-terms {
