--- a/code/dev/less/common.less
+++ b/code/dev/less/common.less
@@ -1,8 +1,7 @@
-input[type="text"], input[type="email"], input[type="password"], textarea, input.form-control {
+input[type="text"], input[type="email"], input[type="password"], textarea, .form-control {
   padding: 1%;
   border: 1px solid #EAEAEA;
   line-height: 20px;
-  width: 98%;
   margin: 0 0 5px;
   background-color: #F8F8F8;
   -webkit-border-radius: 3px;
@@ -12,7 +11,7 @@ input[type="text"], input[type="email"], input[type="password"], textarea, input
   -webkit-box-shadow: none;
   box-shadow: none;
 }
-input[type="text"], input[type="email"], input[type="search"], input[type="password"], textarea,input.form-control {
+input[type="text"], input[type="email"], input[type="search"], input[type="password"], textarea,.form-control {
   -moz-appearance: none !important;
   -webkit-appearance: none !important;
   appearance: none !important;
@@ -28,6 +27,9 @@ form .btn {
   height: 40px;
   line-height: 25px;
 }
+.form-divider {
+
+}
 .btn.btn-success {
   background-color: #FF8A00;
   border-color: #FF8A00;
@@ -38,6 +40,9 @@ form .btn {
 }
 .btn.btn-warning:hover ,.btn.btn-warning:focus {
   border-color: #FF8A00;
+}
+.mar-top20{
+  margin-top: 20px;
 }
 
 
