--- a/code/dev/less/navbar.less
+++ b/code/dev/less/navbar.less
@@ -53,14 +53,18 @@
 
 .nav > li {
   text-align: center;
-  height: 50px;
+  height: 47px;
 }
 
 .navbar-nav > li > a {
-  color: #FF8A00;
+  color: #424242;
   padding-top: 10px;
   padding-bottom: 10px;
   line-height: 16px;
+}
+.dropdown-menu>li>a {
+  color: #424242;
+  letter-spacing: 0.1px;
 }
 
 .top-menu {
