--- a/code/dev/less/signup.less
+++ b/code/dev/less/signup.less
@@ -31,8 +31,19 @@
     .form-control {
       height: 40px;
     }
-    .control-label, label {
-      color: #777;
+  }
+}
+form {
+  .control-label, label {
+    color: #777;
+  }
+}
+form.new-user-form {
+  .form-group {
+    margin: 10px;
+    h4 {
+      color: #FF8A00;
+      font-style: italic;
     }
   }
 }
