--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -230,62 +230,77 @@ textarea.text--courier {
 .text--courier {
   font-family: Courier;
 }
-form .error-messages {
+form .error-messages,
+.form .error-messages {
   display: none;
   opacity: 1;
   line-height: 0%;
   transition: 0.4s linear all;
 }
-form.ng-invalid.ng-submitted .error-messages {
+form.ng-invalid.ng-submitted .error-messages,
+.form.ng-invalid.ng-submitted .error-messages {
   display: block;
   transition: 0.4s linear all;
 }
-form.ng-invalid.ng-submitted .error-messages.ng-inactive {
+form.ng-invalid.ng-submitted .error-messages.ng-inactive,
+.form.ng-invalid.ng-submitted .error-messages.ng-inactive {
   line-height: 50%;
   opacity: 0;
 }
-form.ng-invalid.ng-submitted .error-messages.ng-active {
+form.ng-invalid.ng-submitted .error-messages.ng-active,
+.form.ng-invalid.ng-submitted .error-messages.ng-active {
   line-height: 100%;
   opacity: 1;
 }
-form .has-error .error-messages {
+form .has-error .error-messages,
+.form .has-error .error-messages {
   display: block;
   transition: 0.4s linear all;
 }
-form .has-error .error-messages.ng-inactive {
+form .has-error .error-messages.ng-inactive,
+.form .has-error .error-messages.ng-inactive {
   line-height: 50%;
   opacity: 0;
 }
-form .has-error .error-messages.ng-active {
+form .has-error .error-messages.ng-active,
+.form .has-error .error-messages.ng-active {
   display: block;
   line-height: 100%;
   opacity: 1;
 }
-form .error-messages {
+form .error-messages,
+.form .error-messages {
   color: #d87551;
   transition: 0.4s linear all;
 }
-form .error-messages.alert-text {
+form .error-messages.alert-text,
+.form .error-messages.alert-text {
   transition: 1s linear all;
   color: #d87551;
 }
-form .error-messages.alert-text.ng-enter {
+form .error-messages.alert-text.ng-enter,
+.form .error-messages.alert-text.ng-enter {
   color: #66b2bf;
 }
-form .error-messages.alert-text.ng-enter.ng-enter-active {
+form .error-messages.alert-text.ng-enter.ng-enter-active,
+.form .error-messages.alert-text.ng-enter.ng-enter-active {
   color: #9bbb5a;
 }
-form .error-messages.alert-text.ng-leave {
+form .error-messages.alert-text.ng-leave,
+.form .error-messages.alert-text.ng-leave {
   color: #9bbb5a;
 }
-form .error-messages.alert-text.ng-leave.ng-leave-active {
+form .error-messages.alert-text.ng-leave.ng-leave-active,
+.form .error-messages.alert-text.ng-leave.ng-leave-active {
   color: #9bbb5a;
 }
-form .error-messages.ng-inactive {
+form .error-messages.ng-inactive,
+.form .error-messages.ng-inactive {
   line-height: 50%;
   opacity: 0;
 }
-form .error-messages.ng-active {
+form .error-messages.ng-active,
+.form .error-messages.ng-active {
   line-height: 100%;
   opacity: 1;
 }
