--- a/code/dev/less/common.less
+++ b/code/dev/less/common.less
@@ -44,5 +44,10 @@ form .btn {
 .mar-top20{
   margin-top: 20px;
 }
-
-
+.panel-default>.panel-heading input.form-control, .navbar input.form-control {
+  background-color: #fff;
+  border: 0;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
