--- a/code/dev/less/navbar.less
+++ b/code/dev/less/navbar.less
@@ -2,9 +2,15 @@
   margin: 0;
   border: none;
   border-radius: 0;
-  background-color: #fff;
+  background-color: rgba(255, 140, 0, 0.7);
+  color: #fff;
 
   .navbar-inner {
+
+    .dropdown-toggle {
+      color: #fff;
+      background: transparent !important;
+    }
 
     a.two-line {
       line-height: 30px;
@@ -63,8 +69,8 @@
   line-height: 16px;
 }
 .dropdown-menu>li>a {
-  color: #424242;
-  letter-spacing: 0.1px;
+  color: #515253;
+  letter-spacing: 0.025em;
 }
 
 .top-menu {
