--- a/code/dev/less/variables.less
+++ b/code/dev/less/variables.less
@@ -43,10 +43,10 @@
 @app-top-menu-height: 52px;
 // Sidebar menu
 @app-side-menu-item-height: 40px;
-@app-side-menu-background: @app-color-grey;
+@app-side-menu-background: #fff;
 @app-side-menu-background-logo: lighten(@app-side-menu-background, 20%);
 @app-side-menu-background-selected: darken(@app-side-menu-background, 10%);
-@app-side-menu-text-color: @app-color-orange-logo;
+@app-side-menu-text-color: #515253;
 // Top menu
 // Top menu user auth
 @app-top-menu-user-avatar-height: 40px;
