--- a/code/dev/less/sidebar.less
+++ b/code/dev/less/sidebar.less
@@ -10,8 +10,10 @@ section[drawer] {
     height: @app-top-menu-height;
     background: transparent;
     img {
-      margin: 8px 5px;
+      margin-top: 15px;
+      margin-bottom: 5px;
       vertical-align: middle;
+      margin-left: 25%;
       width: 50%;
     }
   }
