--- a/code/dev/less/common.less
+++ b/code/dev/less/common.less
@@ -2,7 +2,7 @@ input[type="text"], input[type="email"], input[type="password"], textarea, .form
   padding: 1%;
   border: 1px solid #EAEAEA;
   line-height: 20px;
-  margin: 0 0 5px;
+  margin-bottom: 5px;
   background-color: #F8F8F8;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -11,7 +11,7 @@ input[type="text"], input[type="email"], input[type="password"], textarea, .form
   -webkit-box-shadow: none;
   box-shadow: none;
 }
-input[type="text"], input[type="email"], input[type="search"], input[type="password"], textarea,.form-control {
+input[type="text"], input[type="email"], input[type="search"], input[type="password"], textarea {
   -moz-appearance: none !important;
   -webkit-appearance: none !important;
   appearance: none !important;
