Add add “Copy To Clipboard” button next to the CNAME field

--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -741,6 +741,9 @@ section[drawer] .side-menu .dashboard_menu .side-menu-item.item-title a {
 .caching-rules-list .panel-buttons-left {
   padding-right: 20px;
 }
+.btn-copy--cname {
+  margin-left: 10px;
+}
 @font-face {
   font-family: 'revapm';
   src: url('../fonts/revapm.eot?4em4bb');
