--- a/code/dev/less/domains.less
+++ b/code/dev/less/domains.less
@@ -16,7 +16,8 @@
   }
   // NOTE: hardcode fix for ui-select
   .ui-select-container {
-    input::-webkit-input-placeholder,.ui-select-search {
+    input::-webkit-input-placeholder,
+    .ui-select-search {
       min-width: 200px;
     }
   }
@@ -25,5 +26,11 @@
 .caching-rules-list {
   .panel-buttons-left {
     padding-right: 20px;
+  }
+}
+
+.btn{
+  &-copy--cname {
+    margin-left: 10px;
   }
 }
