--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -528,15 +528,18 @@ section[drawer] .side-menu .side-menu-item i {
 section[drawer] .side-menu .side-menu-sub-item {
   display: block;
   padding: 10px 0;
+  padding-left: 10px;
   margin-right: 10px;
-  margin-left: 40px;
+  margin-left: 30px;
   font-size: 13px;
+  border-left: 3px solid transparent;
   color: #515253;
   text-decoration: none;
   letter-spacing: .025em;
 }
 section[drawer] .side-menu .side-menu-sub-item.active {
   color: #f7941e;
+  border-color: #FF8A00;
 }
 section[drawer] .side-menu .side-menu-sub-item.introjs-showElement {
   color: #f9af33;
@@ -549,7 +552,6 @@ section[drawer] .side-menu .side-menu-sub-item {
 }
 section[drawer] .side-menu .active-side-menu-item {
   background-color: #fcfcfc;
-  border-left: 3px solid #FF8A00;
   margin-left: 2px;
 }
 section[drawer] .side-menu .active-side-menu-item .side-menu-item {
@@ -566,9 +568,6 @@ section[drawer] .side-menu .active-side-menu-item .side-menu-sub-item {
 .left-menu-start i {
   margin: 0 4px 0 -17px !important;
   font-size: 20px;
-}
-.sub-menu-icon {
-  margin: 0 4px 0 -17px !important;
 }
 .menu-toggle {
   font-size: 24px;
