new user form with one column

--- a/code/dev/less/signup.less
+++ b/code/dev/less/signup.less
@@ -41,10 +41,10 @@ form {
 form.new-user-form {
   .form-group {
     margin: 10px;
-    h4 {
-      color: #FF8A00;
-      font-style: italic;
-    }
+    //h4 {
+    //  color: #FF8A00;
+    //  font-style: italic;
+    //}
   }
 }
 .header-logo img{
