--- a/code/dev/less/login.less
+++ b/code/dev/less/login.less
@@ -38,6 +38,9 @@
     border-color: #a94442;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(250, 0, 0, 0.6);
   }
+  .error-messages{
+      text-align: center;
+  }
 }
 
 #main .footerNoteA {
