--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -34,6 +34,13 @@
   padding-bottom: 15px;
   margin-bottom: 15px;
 }
+.protocolbox {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 6px 12px;
+  margin: 6px;
+  cursor: move;
+}
 html,
 body {
   height: 100%;
