--- a/code/dev/less/elements/panel.less
+++ b/code/dev/less/elements/panel.less
@@ -16,3 +16,11 @@
 	padding-bottom: 15px;
 	margin-bottom: 15px;
 }
+
+.protocolbox {
+	border: 1px solid #ccc;
+	border-radius: 4px;
+    padding: 6px 12px;
+    margin: 6px;
+    cursor: move;
+}
