--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -300,6 +300,56 @@ form .error-messages.ng-active {
   line-height: 100%;
   opacity: 1;
 }
+.jsoneditor div.tree table.tree {
+  width: auto !important;
+}
+.margin-bottom {
+  margin-bottom: 8px;
+}
+a:focus {
+  outline: none !important;
+}
+.rps-graph .clearfix > .pull-right {
+  width: 100%;
+}
+@media screen and (max-width: 767px) {
+  .navbar-header .ng-isolate-scope > div {
+    width: 280px !important;
+  }
+  .last-btns .btn {
+    clear: both;
+    margin-bottom: 10px;
+    width: 100% ;
+  }
+  .select2-container .select2-choice {
+    width: 87%;
+  }
+  select.form-control.fixed135 {
+    width: 100%;
+  }
+  select.form-control.fixed {
+    width: 100%;
+  }
+  .table_wrepper {
+    width: 100%;
+    overflow-y: auto;
+  }
+  .table_wrepper table {
+    width: auto;
+  }
+  #menuToggleBtn {
+    display: none;
+  }
+  .helpcontainer {
+    width: 285;
+  }
+}
+@media screen and (max-width: 350px) {
+  .navbar-header .ng-isolate-scope > div {
+    width: 235px !important;
+    width: 100%;
+  }
+}
 .main_img_container {
   left: 50%;
   position: absolute;
@@ -701,6 +751,25 @@ section[drawer] .side-menu .dashboard_menu .side-menu-item.item-title a {
   background-size: contain;
   background-repeat: no-repeat;
   background-image: url('../images/background-dashboard.png');
+}
+@-moz-document url-prefix() {
+  section[drawer] .side-menu .side-menu-item {
+    padding-left: 20px;
+  }
+  .paper-header .navbar .navbar-inner .navbar-header .ng-isolate-scope .form-control.ng-pristine.ng-untouched.ng-valid.ng-valid-editable {
+    position: relative;
+    top: 12px;
+  }
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  section[drawer] .side-menu .side-menu-item {
+    padding-left: 20px;
+  }
+}
+@supports (-ms-accelerator:true) {
+  section[drawer] .side-menu .side-menu-item {
+    padding-left: 20px;
+  }
 }
 .domain-caching-rules__info .panel-buttons-left {
   padding-right: 30px;
